Weeks 5 and 6 update

--- a/week6parsing/sample_task.ipynb
+++ b/week6parsing/sample_task.ipynb
@@ -5,6 +5,8 @@
    "id": "fc0c1073",
    "metadata": {},
    "source": [
+    "## Task\n",
+    "\n",
     "This is the information about time in Berlin\n",
     "\n",
     "```python\n",
@@ -192,9 +194,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "147873c8",
+   "metadata": {},
+   "source": [
+    "## Task"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65b1f426",
+   "metadata": {},
+   "source": [
+    "__Work with json file__\n",
+    "\n",
+    "* Read __metadata_notebook.json__\n",
+    "* Print each key, value pair. How many fields are there?\n",
+    "* What is the version of the code mirror mode? Print it. What is the type of this variable?\n",
+    "* Change the value __sideBar__ to `False` and save the dictionary"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e7edaab",
+   "id": "e315b993",
    "metadata": {},
    "outputs": [],
    "source": []
