--- a/week6parsing/sample_task.ipynb
+++ b/week6parsing/sample_task.ipynb
@@ -96,6 +96,14 @@
     "dct = {}\n",
     "dct[singles[0]] = singles[1]\n",
     "dct  </code>\n",
+    "\n",
+    "  <li> Think about the following</li>\n",
+    "  <code>\n",
+    "singles = info_pair[0].split('\":')\n",
+    "dct = {}\n",
+    "dct[singles[0][1:]] = singles[1]\n",
+    "  </code>\n",
+    "\n",
     "    \n",
     "</details>"
    ]
@@ -106,6 +114,14 @@
    "metadata": {},
    "source": [
     "* Transform the data to dictionary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20d501c0",
+   "metadata": {},
+   "source": [
+    "> `:` appears as a normal symbol too; separate by `\":` and exclude `\"` that opens each `singles[0]`"
    ]
   },
   {
